migrate from symmetric jwt to asymmetric jwt