@@ -1,8 +1,7 @@
-package com.example.bbmovie.security;
+package com.example.bbmovie.security.jwt.asymmetric;
 
 import com.example.bbmovie.entity.User;
 import io.jsonwebtoken.*;
-import io.jsonwebtoken.security.Keys;
 import lombok.extern.log4j.Log4j2;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.data.redis.core.RedisTemplate;
@@ -12,58 +11,69 @@ import org.springframework.security.oauth2.client.authentication.OAuth2Authentic
 import org.springframework.security.oauth2.core.user.DefaultOAuth2User;
 import org.springframework.stereotype.Component;
 
-import javax.crypto.SecretKey;
+import java.security.KeyFactory;
+import java.security.PrivateKey;
+import java.security.PublicKey;
+import java.security.spec.PKCS8EncodedKeySpec;
+import java.security.spec.X509EncodedKeySpec;
 import java.util.*;
 import java.util.concurrent.TimeUnit;
+import java.util.Base64;
 
 @Component
 @Log4j2
-public class JwtTokenProvider {
+public class JwtTokenPairedKeyProvider {
 
     private final int jwtExpirationInMs;
     private final int jwtRefreshExpirationInMs;
-    private final SecretKey key;
+    private final PrivateKey privateKey;
+    private final PublicKey publicKey;
     private final RedisTemplate<Object, Object> redisTemplate;
 
-    public JwtTokenProvider(
-            @Value("${app.jwt-secret}") String jwtSecret,
+    public JwtTokenPairedKeyProvider(
+            @Value("${app.jwt-private-key}") String privateKeyStr,
+            @Value("${app.jwt-public-key}") String publicKeyStr,
             @Value("${app.jwt-expiration-milliseconds}") int jwtExpirationInMs,
             @Value("${app.jwt-refresh-expiration-milliseconds}") int jwtRefreshExpirationInMs,
             RedisTemplate<Object, Object> redisTemplate
-    ) {
+    ) throws Exception {
         this.jwtExpirationInMs = jwtExpirationInMs;
         this.jwtRefreshExpirationInMs = jwtRefreshExpirationInMs;
-        this.key = Keys.hmacShaKeyFor(jwtSecret.getBytes());
+        this.privateKey = getPrivateKeyFromString(privateKeyStr);
+        this.publicKey = getPublicKeyFromString(publicKeyStr);
         this.redisTemplate = redisTemplate;
     }
 
-    public String generateAccessToken(Authentication authentication) {
-        String username = getUsernameFromAuthentication(authentication);
-        String role = getRoleFromAuthentication(authentication);
-        Date now = new Date();
-        Date expiryDate = new Date(now.getTime() + jwtExpirationInMs);
+    private PrivateKey getPrivateKeyFromString(String key) throws Exception {
+        byte[] bytes = Base64.getDecoder().decode(key);
+        return KeyFactory.getInstance("RSA").generatePrivate(new PKCS8EncodedKeySpec(bytes));
+    }
 
-        return Jwts.builder()
-                .setSubject(username)
-                .claim("role", role)
-                .setIssuedAt(now)
-                .setExpiration(expiryDate)
-                .signWith(key)
-                .compact();
+    private PublicKey getPublicKeyFromString(String key) throws Exception {
+        byte[] bytes = Base64.getDecoder().decode(key);
+        return KeyFactory.getInstance("RSA").generatePublic(new X509EncodedKeySpec(bytes));
+    }
+
+    public String generateAccessToken(Authentication authentication) {
+        return generateToken(authentication, jwtExpirationInMs);
     }
 
     public String generateRefreshToken(Authentication authentication) {
+        return generateToken(authentication, jwtRefreshExpirationInMs);
+    }
+
+    private String generateToken(Authentication authentication, int expirationInMs) {
         String username = getUsernameFromAuthentication(authentication);
         String role = getRoleFromAuthentication(authentication);
         Date now = new Date();
-        Date expiryDate = new Date(now.getTime() + jwtRefreshExpirationInMs);
+        Date expiryDate = new Date(now.getTime() + expirationInMs);
 
         return Jwts.builder()
                 .setSubject(username)
                 .claim("role", role)
                 .setIssuedAt(now)
                 .setExpiration(expiryDate)
-                .signWith(key)
+                .signWith(privateKey, SignatureAlgorithm.RS256)
                 .compact();
     }
 
@@ -72,20 +82,15 @@ public class JwtTokenProvider {
         if (principal instanceof UserDetails userDetails) {
             return userDetails.getUsername();
         } else if (principal instanceof DefaultOAuth2User oauth2User) {
-            OAuth2AuthenticationToken oAuth2Token = (OAuth2AuthenticationToken) authentication;
-            String provider = oAuth2Token.getAuthorizedClientRegistrationId();
+            OAuth2AuthenticationToken token = (OAuth2AuthenticationToken) authentication;
+            String provider = token.getAuthorizedClientRegistrationId();
             Map<String, Object> attributes = oauth2User.getAttributes();
 
-            String email = switch (provider) {
+            return switch (provider) {
                 case "github" -> attributes.get("login").toString();
-                case "google", "facebook" -> attributes.get("email").toString();
-                default -> "";
+                case "google", "facebook", "discord" -> attributes.get("email").toString();
+                default -> throw new IllegalStateException("Unsupported provider or missing email");
             };
-
-            if (email.isEmpty()) {
-                throw new IllegalStateException("Email not found in OAuth2 user attributes");
-            }
-            return email;
         }
         throw new IllegalStateException("Unsupported principal type: " + principal.getClass().getName());
     }
@@ -101,74 +106,48 @@ public class JwtTokenProvider {
     }
 
     public List<String> getRolesFromToken(String token) {
-        Claims claims = Jwts.parserBuilder()
-                .setSigningKey(key)
-                .build()
-                .parseClaimsJws(token)
-                .getBody();
+        Claims claims = parseClaims(token);
         String role = claims.get("role", String.class);
-        if (role == null) {
-            throw new IllegalStateException("Role claim missing in token");
-        }
-        return List.of(role);
+        return Collections.singletonList(role);
     }
 
     public String getUsernameFromToken(String token) {
         try {
-            Claims claims = Jwts.parserBuilder()
-                    .setSigningKey(key)
-                    .build()
-                    .parseClaimsJws(token)
-                    .getBody();
-            log.info("Token subject (username): {}", claims.getSubject());
-            return claims.getSubject();
+            return parseClaims(token).getSubject();
         } catch (ExpiredJwtException e) {
-            // Extract claims from an expired token
-            Claims claims = e.getClaims();
-            log.info("Extracted username from expired token: {}", claims.getSubject());
-            return claims.getSubject();
+            return e.getClaims().getSubject();
         } catch (JwtException e) {
-            log.error("Invalid token: {}", e.getMessage());
+            log.error("Invalid JWT token: {}", e.getMessage());
             throw new IllegalArgumentException("Invalid JWT token", e);
         }
     }
 
     public Date getExpirationDateFromToken(String token) {
-        Claims claims = Jwts.parserBuilder()
-                .setSigningKey(key)
-                .build()
-                .parseClaimsJws(token)
-                .getBody();
-        log.info("Claims extracted: {}", claims);
-        return claims.getExpiration();
+        return parseClaims(token).getExpiration();
     }
 
     public boolean validateToken(String token) {
         try {
-            Jwts.parserBuilder()
-                    .setSigningKey(key)
-                    .build()
-                    .parseClaimsJws(token);
+            parseClaims(token);
             return true;
-        } catch (Exception ex) {
-            log.error("Token validation error: {}", ex.getMessage());
+        } catch (Exception e) {
+            log.error("Token validation error: {}", e.getMessage());
             return false;
         }
     }
 
     public void invalidateToken(String accessToken) {
         try {
-            String blacklistKey = "blacklist:" + accessToken;
+            String blacklistKey = "rsa-blacklist:" + accessToken;
             redisTemplate.opsForValue().set(
                     blacklistKey,
                     "invalidated",
                     getExpirationDateFromToken(accessToken).getTime() - System.currentTimeMillis(),
                     TimeUnit.MILLISECONDS
             );
-        } catch (ExpiredJwtException ex) {
-            String blacklistKey = "blacklist:" + accessToken;
+        } catch (ExpiredJwtException e) {
             redisTemplate.opsForValue().set(
-                    blacklistKey,
+                    "rsa-blacklist:" + accessToken,
                     "invalidated",
                     jwtRefreshExpirationInMs,
                     TimeUnit.MILLISECONDS
@@ -177,6 +156,14 @@ public class JwtTokenProvider {
     }
 
     public boolean isTokenBlacklisted(String token) {
-        return redisTemplate.hasKey("blacklist:" + token);
+        return redisTemplate.hasKey("rsa-blacklist:" + token);
+    }
+
+    private Claims parseClaims(String token) {
+        return Jwts.parserBuilder()
+                .setSigningKey(publicKey)
+                .build()
+                .parseClaimsJws(token)
+                .getBody();
     }
 }
